TransformationAlgebra/AlgebraParsers/TransformationAlgebraTypedParser.java
// Generated from TransformationAlgebraTyped.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TransformationAlgebraTypedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, NOM=3, ORD=4, ITV=5, RAT=6, COUNT=7, E=8, I=9, O=10, L=11, 
		S=12, BOOL=13, NOMV=14, ORDV=15, ITVV=16, RATV=17, COUNTV=18, EV=19, IV=20, 
		OV=21, LV=22, SV=23, BOOLV=24, REL=25, IMPLIED=26, DATAV=27, WHITESPACE=28, 
		KEYWORD=29, WS=30;
	public static final int
		RULE_start = 0, RULE_fh = 1, RULE_fc1 = 2, RULE_fc2 = 3, RULE_fc3 = 4, 
		RULE_fc = 5, RULE_fa = 6, RULE_fa0 = 7, RULE_fa1 = 8, RULE_fa2 = 9, RULE_fa3 = 10, 
		RULE_c = 11, RULE_bfc = 12, RULE_v = 13, RULE_nomv = 14, RULE_ordv = 15, 
		RULE_itvv = 16, RULE_ratv = 17, RULE_countv = 18, RULE_r = 19, RULE_nom = 20, 
		RULE_ord = 21, RULE_itv = 22, RULE_rat = 23, RULE_count = 24, RULE_rr = 25, 
		RULE_rrr = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "fh", "fc1", "fc2", "fc3", "fc", "fa", "fa0", "fa1", "fa2", 
			"fa3", "c", "bfc", "v", "nomv", "ordv", "itvv", "ratv", "countv", "r", 
			"nom", "ord", "itv", "rat", "count", "rr", "rrr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'Nom'", "'Ord'", "'Itv'", "'Ratio'", "'Count'", 
			"'Ext'", "'Int'", "'O'", "'L'", "'S'", "'Bool'", "'NomV'", "'OrdV'", 
			"'ItvV'", "'RatioV'", "'CountV'", "'ExtV'", "'IntV'", "'OV'", "'LV'", 
			"'SV'", "'BoolV'", "'*'", "'-:'", null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "NOM", "ORD", "ITV", "RAT", "COUNT", "E", "I", "O", 
			"L", "S", "BOOL", "NOMV", "ORDV", "ITVV", "RATV", "COUNTV", "EV", "IV", 
			"OV", "LV", "SV", "BOOLV", "REL", "IMPLIED", "DATAV", "WHITESPACE", "KEYWORD", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TransformationAlgebraTyped.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TransformationAlgebraTypedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public FaContext fa() {
			return getRuleContext(FaContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			fa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FhContext extends ParserRuleContext {
		public TerminalNode IMPLIED() { return getToken(TransformationAlgebraTypedParser.IMPLIED, 0); }
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraTypedParser.WHITESPACE, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public FhContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fh; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFh(this);
		}
	}

	public final FhContext fh() throws RecognitionException {
		FhContext _localctx = new FhContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fh);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(IMPLIED);
			setState(57);
			match(WHITESPACE);
			setState(58);
			c();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fc1Context extends ParserRuleContext {
		public FhContext fh() {
			return getRuleContext(FhContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraTypedParser.WHITESPACE, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public Fc1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fc1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFc1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFc1(this);
		}
	}

	public final Fc1Context fc1() throws RecognitionException {
		Fc1Context _localctx = new Fc1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_fc1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			fh();
			setState(61);
			match(WHITESPACE);
			setState(62);
			c();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fc2Context extends ParserRuleContext {
		public FhContext fh() {
			return getRuleContext(FhContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraTypedParser.WHITESPACE, 0); }
		public Fc1Context fc1() {
			return getRuleContext(Fc1Context.class,0);
		}
		public Fc2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fc2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFc2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFc2(this);
		}
	}

	public final Fc2Context fc2() throws RecognitionException {
		Fc2Context _localctx = new Fc2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_fc2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			fh();
			setState(65);
			match(WHITESPACE);
			setState(66);
			fc1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fc3Context extends ParserRuleContext {
		public FhContext fh() {
			return getRuleContext(FhContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraTypedParser.WHITESPACE, 0); }
		public Fc2Context fc2() {
			return getRuleContext(Fc2Context.class,0);
		}
		public Fc3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fc3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFc3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFc3(this);
		}
	}

	public final Fc3Context fc3() throws RecognitionException {
		Fc3Context _localctx = new Fc3Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_fc3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			fh();
			setState(69);
			match(WHITESPACE);
			setState(70);
			fc2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FcContext extends ParserRuleContext {
		public Fc1Context fc1() {
			return getRuleContext(Fc1Context.class,0);
		}
		public Fc2Context fc2() {
			return getRuleContext(Fc2Context.class,0);
		}
		public Fc3Context fc3() {
			return getRuleContext(Fc3Context.class,0);
		}
		public FcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFc(this);
		}
	}

	public final FcContext fc() throws RecognitionException {
		FcContext _localctx = new FcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fc);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				fc1();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				fc2();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				fc3();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaContext extends ParserRuleContext {
		public Fa0Context fa0() {
			return getRuleContext(Fa0Context.class,0);
		}
		public Fa1Context fa1() {
			return getRuleContext(Fa1Context.class,0);
		}
		public Fa2Context fa2() {
			return getRuleContext(Fa2Context.class,0);
		}
		public Fa3Context fa3() {
			return getRuleContext(Fa3Context.class,0);
		}
		public FaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFa(this);
		}
	}

	public final FaContext fa() throws RecognitionException {
		FaContext _localctx = new FaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fa);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				fa0();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				fa1();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				fa2();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				fa3();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fa0Context extends ParserRuleContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public Fa0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fa0; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFa0(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFa0(this);
		}
	}

	public final Fa0Context fa0() throws RecognitionException {
		Fa0Context _localctx = new Fa0Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_fa0);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			c();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fa1Context extends ParserRuleContext {
		public Fc1Context fc1() {
			return getRuleContext(Fc1Context.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(TransformationAlgebraTypedParser.WHITESPACE, 0); }
		public FaContext fa() {
			return getRuleContext(FaContext.class,0);
		}
		public Fa1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fa1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFa1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFa1(this);
		}
	}

	public final Fa1Context fa1() throws RecognitionException {
		Fa1Context _localctx = new Fa1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_fa1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			fc1();
			setState(86);
			match(WHITESPACE);
			setState(87);
			fa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fa2Context extends ParserRuleContext {
		public Fc2Context fc2() {
			return getRuleContext(Fc2Context.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TransformationAlgebraTypedParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TransformationAlgebraTypedParser.WHITESPACE, i);
		}
		public List<FaContext> fa() {
			return getRuleContexts(FaContext.class);
		}
		public FaContext fa(int i) {
			return getRuleContext(FaContext.class,i);
		}
		public Fa2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fa2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFa2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFa2(this);
		}
	}

	public final Fa2Context fa2() throws RecognitionException {
		Fa2Context _localctx = new Fa2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_fa2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			fc2();
			setState(90);
			match(WHITESPACE);
			setState(91);
			fa();
			setState(92);
			match(WHITESPACE);
			setState(93);
			fa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fa3Context extends ParserRuleContext {
		public Fc2Context fc2() {
			return getRuleContext(Fc2Context.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TransformationAlgebraTypedParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TransformationAlgebraTypedParser.WHITESPACE, i);
		}
		public List<FaContext> fa() {
			return getRuleContexts(FaContext.class);
		}
		public FaContext fa(int i) {
			return getRuleContext(FaContext.class,i);
		}
		public Fa3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fa3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterFa3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitFa3(this);
		}
	}

	public final Fa3Context fa3() throws RecognitionException {
		Fa3Context _localctx = new Fa3Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_fa3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			fc2();
			setState(96);
			match(WHITESPACE);
			setState(97);
			fa();
			setState(98);
			match(WHITESPACE);
			setState(99);
			fa();
			setState(100);
			match(WHITESPACE);
			setState(101);
			fa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public RrContext rr() {
			return getRuleContext(RrContext.class,0);
		}
		public RrrContext rrr() {
			return getRuleContext(RrrContext.class,0);
		}
		public BfcContext bfc() {
			return getRuleContext(BfcContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_c);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				v();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				r();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				rr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				rrr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				bfc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BfcContext extends ParserRuleContext {
		public FcContext fc() {
			return getRuleContext(FcContext.class,0);
		}
		public BfcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bfc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterBfc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitBfc(this);
		}
	}

	public final BfcContext bfc() throws RecognitionException {
		BfcContext _localctx = new BfcContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_bfc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__0);
			setState(111);
			fc();
			setState(112);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContext extends ParserRuleContext {
		public NomvContext nomv() {
			return getRuleContext(NomvContext.class,0);
		}
		public TerminalNode OV() { return getToken(TransformationAlgebraTypedParser.OV, 0); }
		public TerminalNode LV() { return getToken(TransformationAlgebraTypedParser.LV, 0); }
		public TerminalNode SV() { return getToken(TransformationAlgebraTypedParser.SV, 0); }
		public VContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitV(this);
		}
	}

	public final VContext v() throws RecognitionException {
		VContext _localctx = new VContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_v);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOMV:
			case ORDV:
			case ITVV:
			case RATV:
			case COUNTV:
			case EV:
			case IV:
			case BOOLV:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				nomv();
				}
				break;
			case OV:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(OV);
				}
				break;
			case LV:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(LV);
				}
				break;
			case SV:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(SV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomvContext extends ParserRuleContext {
		public TerminalNode NOMV() { return getToken(TransformationAlgebraTypedParser.NOMV, 0); }
		public OrdvContext ordv() {
			return getRuleContext(OrdvContext.class,0);
		}
		public TerminalNode BOOLV() { return getToken(TransformationAlgebraTypedParser.BOOLV, 0); }
		public NomvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterNomv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitNomv(this);
		}
	}

	public final NomvContext nomv() throws RecognitionException {
		NomvContext _localctx = new NomvContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_nomv);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOMV:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(NOMV);
				}
				break;
			case ORDV:
			case ITVV:
			case RATV:
			case COUNTV:
			case EV:
			case IV:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				ordv();
				}
				break;
			case BOOLV:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				match(BOOLV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrdvContext extends ParserRuleContext {
		public TerminalNode ORDV() { return getToken(TransformationAlgebraTypedParser.ORDV, 0); }
		public ItvvContext itvv() {
			return getRuleContext(ItvvContext.class,0);
		}
		public OrdvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ordv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).enterOrdv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TransformationAlgebraTypedListener ) ((TransformationAlgebraTypedListener)listener).exitOrdv(this);
		}
	}

	public final OrdvContext ordv() throws RecognitionException {
		OrdvContext _localctx = new OrdvContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_ordv);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORDV:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(ORDV);
				}
				break;
			case ITVV:
			case RATV:
			case COUNTV:
			case EV:
			case IV:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				itvv();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
